# rag_brainstorm

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py
app/documents/: __init__.py  loader.py  models.py  sources.py
app/evaluation/: dataset.py  metrics.py  runner.py
app/generation/: __init__.py  guards.py  llm.py  prompt.py
app/indexing/: __init__.py  chunker.py  embeddings.py  milvus_store.py  persistent_index.py  vector_store.py
app/retrieval/: __init__.py  hybrid.py  keyword.py  query_rewriter.py  reranker.py  schemas.py  vector.py
data/eval/: sample_eval.json
docs/articles/: 20-min-rag-intro.md  rag-from-zero-to-one.html  rag-optimization-in-practice.md
docs/roadmap/: 2026-04-23-rag-roadmap-and-learning-plan.md
docs/superpowers/plans/: 2026-04-23-personal-rag-implementation-plan.md
docs/superpowers/specs/: 2026-04-23-personal-rag-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx  styles.css
scripts/: dev-backend.sh  dev-frontend.sh  dev.sh
tests/: test_api.py  test_chunker.py  test_embeddings.py  test_evaluation.py  test_generation.py  test_loader.py  test_persistent_index.py  test_query_rewriter.py  test_reranker.py  test_vector_store.py
